testdata/008-visit.stderr
error: expected: "VISIBLE" (line=2 col=7)
    VISIT "Humanity"
        ^
