testdata/008-visit.lol
HAI 1.2
  VISIT "Humanity"
KTHXBYE
